--- a/Scoutter/Views/Account/Register.cshtml
+++ b/Scoutter/Views/Account/Register.cshtml
@@ -3,7 +3,10 @@
 @{
     ViewData["Title"] = "Register";
 }
-
+@{
+    // RegisterView.cshtml
+    // Must say @model Scouter.ViewModel.RegisterViewModel
+}
     <div class="row">
         <div class="col-md-8 mx-auto">
             <div class="card">
