--- a/Scoutter/Views/Home/Index.cshtml
+++ b/Scoutter/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿
 @{
     ViewData["Title"] = "Home page";
+
+    // Contains Middle Area
 }
 
 <div style="background-color:green;" class="text-center">
