--- a/Scoutter/Views/Shared/_Layout.cshtml
+++ b/Scoutter/Views/Shared/_Layout.cshtml
@@ -17,7 +17,9 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <!-- _LoginPartial -->
                     <partial name="_LoginPartial" />
+                    <!-- Login Partial -->
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -32,7 +34,9 @@
     </header>
     <div class="container-fluid">
         <main role="main" class="pb-3">
+            <!-- Child Content -->
             @RenderBody()
+            <!-- Child Content -->
         </main>
     </div>
 
@@ -44,6 +48,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <!-- Child Section Content "Scripts" (Optional) -->
     @RenderSection("Scripts", required: false)
+    <!-- Child Section Content "Scripts" (Optional) -->
 </body>
 </html>
